emails added, some social links added, minor changes

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 <section id="topbar" class="d-none d-lg-block">
     <div class="container clearfix">
         <div class="contact-info float-left">
-            <i class="fa fa-envelope-o"></i> <a href="mailto:khomeni404@gmail.com">khomeni404@gmail.com</a>
+            <i class="fa fa-envelope-o"></i> <a href="mailto:info@sebd.co">info@sebd.co</a>
             <i class="fa fa-phone"></i> +88 01717-659287
         </div>
         <div class="social-links float-right">
-            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/khomeni404" class="facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/khomeni404" class="linkedin"><i class="fa fa-linkedin"></i></a>
+            <!--<a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
             <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>-->
         </div>
     </div>
 </section><!-- End Top Bar-->
@@ -426,9 +426,9 @@
                         <h4>IsCool Bell</h4>
                         <p>School Management</p>
                         <a href="assets/img/portfolio/bell.jpg" data-gall="portfolioGallery"
-                           class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
-                        <a href="portfolio-details.html" class="details-link" title="More Details"><i
-                                class="bx bx-link"></i></a>
+                           class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
+                        <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
+                                class="bx bx-link"></i></a>-->
                     </div>
                 </div>
 
@@ -438,9 +438,9 @@
                         <h4>egAccounts</h4>
                         <p>Accounting Solution</p>
                         <a href="assets/img/portfolio/details/eg-accounts.png" data-gall="portfolioGallery"
-                           class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
-                        <a href="portfolio-details.html" class="details-link" title="More Details"><i
-                                class="bx bx-link"></i></a>
+                           class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
+                        <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
+                                class="bx bx-link"></i></a>-->
                     </div>
                 </div>
 
@@ -450,9 +450,9 @@
                         <h4>Prism</h4>
                         <p>Customized Accounting Software</p>
                         <a href="assets/img/portfolio/prism.jpg" data-gall="portfolioGallery"
-                           class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
-                        <a href="portfolio-details.html" class="details-link" title="More Details"><i
-                                class="bx bx-link"></i></a>
+                           class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
+                        <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
+                                class="bx bx-link"></i></a>-->
                     </div>
                 </div>
 
@@ -462,9 +462,9 @@
                         <h4>eVision</h4>
                         <p>Organizational Management</p>
                         <a href="assets/img/portfolio/e-vision.jpg" data-gall="portfolioGallery"
-                           class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
-                        <a href="portfolio-details.html" class="details-link" title="More Details"><i
-                                class="bx bx-link"></i></a>
+                           class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
+                        <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
+                                class="bx bx-link"></i></a>-->
                     </div>
                 </div>
 
@@ -474,9 +474,9 @@
                         <h4>Mirror2</h4>
                         <p>HR & Financial Managemnet</p>
                         <a href="assets/img/portfolio/mirror2.jpg" data-gall="portfolioGallery"
-                           class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
-                        <a href="portfolio-details.html" class="details-link" title="More Details"><i
-                                class="bx bx-link"></i></a>
+                           class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
+                        <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
+                                class="bx bx-link"></i></a>-->
                     </div>
                 </div>
 
@@ -486,9 +486,9 @@
                         <h4>Len-Den</h4>
                         <p>Financial Management</p>
                         <a href="assets/img/portfolio/lenden.jpg" data-gall="portfolioGallery"
-                           class="venobox preview-link" title="Preview"><i class="bx bx-plus"></i></a>
-                        <a href="portfolio-details.html" class="details-link" title="More Details"><i
-                                class="bx bx-link"></i></a>
+                           class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
+                        <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
+                                class="bx bx-link"></i></a>-->
                     </div>
                 </div>
 
@@ -655,13 +655,14 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
-                        <div class="pic"><img src="assets/img/teams/shabab.jpg" height="270" width="230"></div>
+                        <div class="pic"><img src="assets/img/teams/shabab-2.jpeg" height="270" width="230"></div>
                         <div class="details">
                             <h4>Shabab Ahmed</h4>
                             <span>Developer (Android)</span>
                             <div class="social">
+                                <a href="https://www.facebook.com/cool.peachy"><i class="fa fa-facebook"></i></a>
+                                <a href="https://github.com/shabab239"><i class="fa fa-github"></i></a>
                                 <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
                                 <a href=""><i class="fa fa-linkedin"></i></a>
                             </div>
@@ -762,9 +763,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Contact Us</h2>
-                <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam
-                    enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum
-                    velit export irure minim illum fore</p>
+                <p>You can reach us by using any of the following method:</p>
             </div>
 
             <div class="row contact-info">
@@ -773,11 +772,10 @@
                     <div class="contact-address">
                         <i class="ion-ios-location-outline"></i>
                         <h3>Address</h3>
-                        <address>Address: House 6 (5th Floor) Road 11,
-                            Sector 12,
-                            Uttara Model Town,
-                            Uttara West,
-                            Dhaka 1230.
+                        <address>Address: House 6 (5th Floor) <br>
+                            Road 11, Sector 12 <br>
+                            Uttara Model Town, Uttara West <br>
+                            Dhaka 1230
                         </address>
                     </div>
                 </div>
@@ -794,7 +792,10 @@
                     <div class="contact-email">
                         <i class="ion-ios-email-outline"></i>
                         <h3>Email</h3>
-                        <p><a href="mailto:info@example.com">khomeni404@gmail.com</a></p>
+                        <p><a href="mailto:khomeni404@gmail.com">khomeni404@gmail.com</a></p>
+                        <p><a href="mailto:info@sebd.co">info@sebd.co</a></p>
+                        <p><a href="mailto:support@sebd.co">support@sebd.co</a></p>
+                        <p><a href="mailto:sales@sebd.co">sales@sebd.co</a></p>
                     </div>
                 </div>
 
