emails added, some social links added, minor changes

--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Contact Us</h2>
-                <p>You can reach us by using any of the following method:</p>
+                <p>You can reach us by using any of the following methods:</p>
             </div>
 
             <div class="row contact-info">
