bell & prism portfolio image changed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div id="logo" class="pull-left">
             <!--<h1><a href="index.html">Soft<span>Engine</span> Ltd.</a></h1>-->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html"><img src="assets/img/logos/banner-A.png" width="300" height="55" alt=""></a>
+            <a href="index.html"><img src="assets/img/logos/Full_banner B.JPG" width="300" height="55" alt=""></a>
         </div>
 
         <nav id="nav-menu-container">
@@ -99,14 +99,14 @@
         </div>
     </div>
 
-    <div id="intro-carousel" class="owl-carousel">
+    <!--<div id="intro-carousel" class="owl-carousel">
         <div class="item" style="background-image: url('assets/img/intro-carousel/1.jpg');"></div>
         <div class="item" style="background-image: url('assets/img/intro-carousel/2.jpg');"></div>
         <div class="item" style="background-image: url('assets/img/intro-carousel/3.jpg');"></div>
         <div class="item" style="background-image: url('assets/img/intro-carousel/4.jpg');"></div>
         <div class="item" style="background-image: url('assets/img/intro-carousel/5.jpg');"></div>
     </div>
-
+ -->
 </section><!-- End Intro Section -->
 
 <main id="main">
@@ -421,11 +421,11 @@
             <div class="row portfolio-container">
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                    <img src="assets/img/portfolio/bell.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/portfolio/bell.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                         <h4>IsCool Bell</h4>
                         <p>School Management</p>
-                        <a href="assets/img/portfolio/bell.jpg" data-gall="portfolioGallery"
+                        <a href="assets/img/portfolio/bell.png" data-gall="portfolioGallery"
                            class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
                         <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
                                 class="bx bx-link"></i></a>-->
@@ -445,11 +445,11 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                    <img src="assets/img/portfolio/prism.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/portfolio/soft_prism.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                         <h4>Prism</h4>
                         <p>Customized Accounting Software</p>
-                        <a href="assets/img/portfolio/prism.jpg" data-gall="portfolioGallery"
+                        <a href="assets/img/portfolio/soft_prism.png" data-gall="portfolioGallery"
                            class="venobox preview-link" title="Preview"><i class="bx bx-zoom-in"></i></a>
                         <!--<a href="portfolio-details.html" class="details-link" title="More Details"><i
                                 class="bx bx-link"></i></a>-->
@@ -584,13 +584,12 @@
                     </div>
                 </div>
 
-
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
-                        <div class="pic"><img src="assets/img/teams/shahin.jpg" height="270" width="230" alt=""></div>
+                        <div class="pic"><img src="assets/img/teams/paran.png" height="270" width="230"></div>
                         <div class="details">
-                            <h4>Shahinur Rahman</h4>
-                            <span>Sr. Software Engineer</span>
+                            <h4>Engr. Shah Paran</h4>
+                            <span>Sr. Server Engineer (Linux)</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -655,16 +654,16 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
-                        <div class="pic"><img src="assets/img/teams/shabab-2.jpeg" height="270" width="230"></div>
+                        <div class="pic"><img src="assets/img/teams/shabab-3.jpg" height="270" width="230"></div>
                         <div class="details">
                             <h4>Shabab Ahmed</h4>
-                            <span>Developer (Android)</span>
+                            <span>Jr. Software Developer</span>
                             <div class="social">
                                 <a href="https://www.facebook.com/cool.peachy"><i class="fa fa-facebook"></i></a>
                                 <a href="https://github.com/shabab239"><i class="fa fa-github"></i></a>
-                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
                             </div>
                         </div>
                     </div>
@@ -707,26 +706,10 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
-                        <div class="pic"><img src="assets/img/teams/paran.png" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Engr. Shah Paran</h4>
-                            <span>Sr. Server Engineer (Linux)</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
                         <div class="pic"><img src="assets/img/teams/sium.jpg" height="270" width="230"></div>
                         <div class="details">
                             <h4>Sadat Ahmed Sadi</h4>
-                            <span>Server Engineer</span>
+                            <span>Jr. Server Engineer</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
@@ -772,10 +755,10 @@
                     <div class="contact-address">
                         <i class="ion-ios-location-outline"></i>
                         <h3>Address</h3>
-                        <address>Address: House 6 (5th Floor) <br>
-                            Road 11, Sector 12 <br>
-                            Uttara Model Town, Uttara West <br>
-                            Dhaka 1230
+                        <address>Address: House 75/5/1 (Flat A4) <br>
+                            East Maniknagar <br>
+                            Jatrabari <br>
+                            Dhaka 1203
                         </address>
                     </div>
                 </div>
@@ -785,6 +768,7 @@
                         <i class="ion-ios-telephone-outline"></i>
                         <h3>Phone Number</h3>
                         <p><a href="tel:+8801717659287">+88 01717-659287</a></p>
+                        <p><a href="tel:+8801717659287">+88 01310-593131</a></p>
                     </div>
                 </div>
 
