--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
                 </div>
 
                 <div class="col-lg-6 about-img">
-                    <div id="free-head" style="font-size: 20px; color: #8c65cf; font-weight: bolder; font-family: Courier New, Courier, monospace"
-                         class="col-md-12 text-right  wow fadeInRight"  data-wow-delay="1.1s">
+                    <div id="free-head"
+                         style="font-size: 20px; color: #8c65cf; font-weight: bolder; font-family: Courier New, Courier, monospace"
+                         class="col-md-12 text-right  wow fadeInRight" data-wow-delay="1.1s">
                         A free Software Provider.
                     </div>
 
@@ -787,9 +788,12 @@
         </div>
 
         <div class="container mb-4">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3652.541361051052!2d90.4490805312278!3d23.728067017985023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1603634210369!5m2!1sen!2sbd"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3638.542086547616!2d90.4358458977139!3d23.724149671314674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjPCsDQzJzI4LjEiTiA5MMKwMjYnMTUuMCJF!5e1!3m2!1sen!2sbd!4v1612015798155!5m2!1sen!2sbd"
                     width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
+            <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3652.541361051052!2d90.4490805312278!3d23.728067017985023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1603634210369!5m2!1sen!2sbd"
+                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>-->
             <!--        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22864.11283411948!2d-73.96468908098944!3d40.630720240038435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sbg!4v1540447494452" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>-->
         </div>
 
