--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div id="logo" class="pull-left">
             <!--<h1><a href="index.html">Soft<span>Engine</span> Ltd.</a></h1>-->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html"><img src="assets/img/logos/Full_banner B.JPG" width="300" height="55" alt=""></a>
+            <a href="index.html"><img src="assets/img/logos/Soft%20Engine%20Logo.PNG" width="300" height="55" alt=""></a>
         </div>
 
         <nav id="nav-menu-container">
