--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div id="logo" class="pull-left">
             <!--<h1><a href="index.html">Soft<span>Engine</span> Ltd.</a></h1>-->
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html"><img src="assets/img/logos/Soft%20Engine%20Logo.PNG" width="300" height="55" alt=""></a>
+            <a href="index.html"><img src="assets/img/logos/Soft%20Engine%20Logo.PNG" width="400" height="55" alt=""></a>
         </div>
 
         <nav id="nav-menu-container">
@@ -389,9 +389,10 @@
             <div class="owl-carousel clients-carousel">
                 <img style="padding: 10px" src="assets/img/clients/qrf-logo.png" alt="">
                 <img style="padding: 10px" src="assets/img/clients/buet-ce-logo.jpg" alt="">
-                <img style="padding: 10px" src="assets/img/clients/dp-logo.jpg" alt="">
                 <img style="padding: 10px" src="assets/img/clients/pmsc.png" width="280" height="80" alt="">
                 <img style="padding: 10px" src="assets/img/clients/bafsj.png" alt="">
+                <img style="padding: 10px" src="assets/img/clients/dp-logo.jpg" alt="">
+                <img style="padding: 10px" src="assets/img/clients/son.jpg" alt="">
                 <!--<img style="padding: 10px" src="assets/img/clients/client-6.png" alt="">
                 <img style="padding: 10px" src="assets/img/clients/client-7.png" alt="">
                 <img style="padding: 10px" src="assets/img/clients/client-8.png" alt="">-->
