--- a/index.html
+++ b/index.html
@@ -800,11 +800,13 @@
 
         <div class="container">
             <div class="form">
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <form name="SEBD_MAIL"
+                      action="https://script.google.com/macros/s/AKfycbzVJIYtnFY4SUSH4blLzykk7Tl_lFYTfvegKKlx85bz9BB1vNyeo7oYX_taEFb3xsPRKQ/exec"
+                      method="post" role="form" class="php-email-form">
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                                   data-rule="minlen:4" data-msg="Please enter at least 4 chars"/>
+                                   data-rule="minlen:4" data-msg="Please enter at least 4 characters"/>
                             <div class="validate"></div>
                         </div>
                         <div class="form-group col-md-6">
@@ -815,7 +817,7 @@
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                               data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject"/>
+                               data-rule="minlen:4" data-msg="Please enter at least 4 characters of subject"/>
                         <div class="validate"></div>
                     </div>
                     <div class="form-group">
@@ -862,6 +864,7 @@
 <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
 <!-- Vendor JS Files -->
+<script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
