send message bell api added

--- a/index.html
+++ b/index.html
@@ -800,8 +800,7 @@
 
         <div class="container">
             <div class="form">
-                <form name="SEBD_MAIL"
-                      action="https://script.google.com/macros/s/AKfycbzVJIYtnFY4SUSH4blLzykk7Tl_lFYTfvegKKlx85bz9BB1vNyeo7oYX_taEFb3xsPRKQ/exec"
+                <form action="http://localhost/api/web/postMessage.se"
                       method="post" role="form" class="php-email-form">
                     <div class="form-row">
                         <div class="form-group col-md-6">
