management section added team section tuned send email link fixed

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#mgt">Management</a></li>
                 <li><a href="#team">Team</a></li>
                 <!--<li class="menu-has-children"><a href="">Drop Down</a>
                   <ul>
@@ -554,21 +555,6 @@
 
 
             <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/teams/liaz.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Tajul Islam Liaz</h4>
-                            <span>Chief Software Architect</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
@@ -618,9 +604,25 @@
                     </div>
                 </div>
 
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/teams/harun.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Harunor Roshid</h4>
+                            <span>Network Administrator</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="row">
+
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
                         <div class="pic"><img src="assets/img/teams/mehedi.jpg" height="270" width="230"></div>
@@ -639,39 +641,6 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
-                        <div class="pic"><img src="assets/img/teams/harun.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Harunor Roshid</h4>
-                            <span>Network Administrator</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/teams/shabab-3.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Shabab Ahmed</h4>
-                            <span>Jr. Software Developer</span>
-                            <div class="social">
-                                <a href="https://www.facebook.com/cool.peachy"><i class="fa fa-facebook"></i></a>
-                                <a href="https://github.com/shabab239"><i class="fa fa-github"></i></a>
-                                <!--<a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
                         <div class="pic"><img src="assets/img/teams/eleas.jpg" height="270" width="230"></div>
                         <div class="details">
                             <h4>M. E. Khandaker</h4>
@@ -686,10 +655,59 @@
                     </div>
                 </div>
 
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/teams/shabab.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Shabab Ahmed</h4>
+                            <span>Jr. Software Developer</span>
+                            <div class="social">
+                                <a href="https://www.facebook.com/cool.peachy"><i class="fa fa-facebook"></i></a>
+                                <a href="https://github.com/shabab239"><i class="fa fa-github"></i></a>
+                                <!--<a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                <div class="member">
+                    <div class="pic"><img src="assets/img/teams/moumita.jpg" height="270" width="230"></div>
+                    <div class="details">
+                        <h4>Moumita Bhuiyan</h4>
+                        <span>Jr. Software Engineer</span>
+                        <div class="social">
+                            <a href=""><i class="fa fa-twitter"></i></a>
+                            <a href=""><i class="fa fa-facebook"></i></a>
+                            <a href=""><i class="fa fa-google-plus"></i></a>
+                            <a href=""><i class="fa fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
             </div>
 
             <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/teams/sium.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Sadat Ahmed Sadi</h4>
+                            <span>Jr. Server Engineer</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-lg-3 col-md-6">
                     <div class="member">
                         <div class="pic"><img src="assets/img/teams/mahfuz.jpg" height="270" width="230"></div>
@@ -706,42 +724,84 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/teams/sium.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Sadat Ahmed Sadi</h4>
-                            <span>Jr. Server Engineer</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/teams/moumita.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Moumita Bhuiyan</h4>
-                            <span>Jr. Software Engineer</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
             </div>
 
         </div>
     </section><!-- End Team Section -->
+
+    <section id="mgt" class="wow fadeInUp">
+        <div class="container">
+            <div class="section-header">
+                <h2>Management</h2>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/liaz.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Muhammad Tajul Islam</h4>
+                            <span>Manging Director & CEO</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/safiur.jpg" width="230" height="270"></div>
+                        <div class="details">
+                            <h4>Safiur Rahman Khan</h4>
+                            <span>Manager (Operations & Oversight)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/no_avatar.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Jan-E-Alam</h4>
+                            <span>Manager (Accounts)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/mgt/no_avatar.jpg" alt=""></div>
+                        <div class="details">
+                            <h4>Abu Hossain</h4>
+                            <span>Executive Officer (Business Promotion & Support)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section><!-- End Management Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="wow fadeInUp">
