--- a/index.html
+++ b/index.html
@@ -723,21 +723,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="assets/img/teams/rikon.jpg" height="270" width="230"></div>
-                        <div class="details">
-                            <h4>Roknuzzaman Rikon</h4>
-                            <span>Executive Officer (Business Promotion & Support)</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
             </div>
 
@@ -772,6 +757,21 @@
                         <div class="details">
                             <h4>Safiur Rahman Khan</h4>
                             <span>Manager (Operations & Oversight)</span>
+                            <div class="social">
+                                <a href=""><i class="fa fa-twitter"></i></a>
+                                <a href=""><i class="fa fa-facebook"></i></a>
+                                <a href=""><i class="fa fa-google-plus"></i></a>
+                                <a href=""><i class="fa fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="member">
+                        <div class="pic"><img src="assets/img/teams/rikon.jpg" height="270" width="230"></div>
+                        <div class="details">
+                            <h4>Roknuzzaman Rikon</h4>
+                            <span>Sr. Executive Officer (Business Promotion & Support)</span>
                             <div class="social">
                                 <a href=""><i class="fa fa-twitter"></i></a>
                                 <a href=""><i class="fa fa-facebook"></i></a>
